--- a/Irregular-occ/Irregular-occ.tex
+++ b/Irregular-occ/Irregular-occ.tex
@@ -28,7 +28,7 @@
 
 %%%%% AUTHORS - PLACE YOUR OWN MACROS HERE %%%%%
 
-\title[New orbits and predictions of stellar occultations by irregular satellites up to 2020]{New numerical integration of orbits of irregular satellites and prediction of stellar occultations up to 2020}
+\title[New orbits and predictions of stellar occultations by irregular satellites up to 2020]{New orbits for irregular satellites based on thousands of new observations and predictions of stellar occultations up to 2020}
 \author[A. R. Gomes-J\'unior, M. Assafin, L. Beauvalet et al.]{A. R. Gomes-J\'unior$^{1}$\thanks{E-mail: altair08@astro.ufrj.br},
 M. Assafin$^{1,\dag}$,
 L. Beauvalet$^{2,3}$,
@@ -58,11 +58,12 @@ $^{6}$Federal University of Technology - Paran\'a (UTFPR / DAFIS), Rua Sete de S
 \label{firstpage}
 
 \begin{abstract}
-Due to their orbital configurations, it is common belief that the irregular satellites were probably captured by the giant planets in the early solar system. It is important to know their physical parameters, such as size, shape, albedo and composition, to trace back their true origin. The best ground-based technique to determine size and shape, and thus constrain the albedo and in a broader sense composition, is the observation of stellar occultations by these objects but this demands a very precise ephemeris based on new and good positions.
-\cite{GomesJunior2015} published 6523 observations obtained between 1992 and 2014 for 18 irregular satellites with an estimated error in the positions of about 60 to 80 mas.
-Based on this observations, we aimed to generate new numerical integration of the orbits of eight largest irregular satellites of Jupiter: Himalia, Elara, Pasiphae, Carme, Lysithea, Sinope, Ananke and Leda. This is a short-time ephemeris that corrected systematic errors from previous ephemeris (JPL JUP300). For Phoebe we updated ephemeris from \cite{Desmars2013} using 75\% more positions than the previous one.
-Also Jupiter will cross the galactic plane in 2019-2020 and Saturn in 2018. This creates a good opportunity to predict stellar occultations due to the large number of events that can be predicted in these periods. Thus, we aimed to predict stellar occultations for the same 9 satellites cited above. Using the UCAC4 catalogue we managed to identify \noccs candidates of stellar occultations between the period of January, 2016 and December, 2020.
-We discuss how the successful observation of a stellar occultation by these objects is quite possible and present some of those potential occultations.
+%Due to their orbital configurations, it is common belief that the irregular satellites were probably captured by the giant planets in the early solar system. It is important to know their physical parameters, such as size, shape, albedo and composition, to trace back their true origin. The best ground-based technique to determine size and shape, and thus constrain the albedo and in a broader sense composition, is the observation of stellar occultations by these objects but this demands a very precise ephemeris based on new and good positions.
+%\cite{GomesJunior2015} published 6523 observations obtained between 1992 and 2014 for 18 irregular satellites with an estimated error in the positions of about 60 to 80 mas.
+%Based on this observations, we aimed to generate new numerical integration of the orbits of eight largest irregular satellites of Jupiter: Himalia, Elara, Pasiphae, Carme, Lysithea, Sinope, Ananke and Leda. This is a short-time ephemeris that corrected systematic errors from previous ephemeris (JPL JUP300). For Phoebe we updated ephemeris from \cite{Desmars2013} using 75\% more positions than the previous one.
+%Also Jupiter will cross the galactic plane in 2019-2020 and Saturn in 2018. This creates a good opportunity to predict stellar occultations due to the large number of events that can be predicted in these periods. Thus, we aimed to predict stellar occultations for the same 9 satellites cited above. Using the UCAC4 catalogue we managed to identify \noccs candidates of stellar occultations between the period of January, 2016 and December, 2020.
+%We discuss how the successful observation of a stellar occultation by these objects is quite possible and present some of those potential occultations.
+\cite{GomesJunior2015} published 6523 new positions for 18 irregular satellites from observations made between 1992 and 2014 with an estimated error of about 60 to 80 mas. Based on this set of original positons, we performed numerical integrations for deriving new orbits for the eight largest irregular satellites of Jupiter: Himalia, Elara, Pasiphae, Carme, Lysithea, Sinope, Ananke and Leda. This corrected systematic errors and resulted in an ephemeris more accurate/precise than JPL JUP300 for these bodies at least in the immediate future. For Phoebe we updated the ephemeris from \cite{Desmars2013} using 75\% more positions than the previous one. Due to their orbital configurations, it is common belief that the irregular satellites were captured by the giant planets in the early Solar System, but there is no consensus for a single model explaining where they were formed. Size, shape, albedo and composition would help a lot to trace back their true origin, but these physical parameters are yet poorly known for irregular satellites. The observation of stellar occultations would allow for the determination of such parameters. Indeed Jupiter will cross the galactic plane in 2019-2020 and Saturn in 2018, improving a lot the chances of observing such events in the near future. Using the derived ephemerides and the UCAC4 catalogue we managed to identify \noccs candidate stellar occultations between January 2016 and December 2020 for the 9 irregular satellites studied here. We discussed how the successful observation of a stellar occultation by these objects is quite possible and present some of those potential occultations.
 \end{abstract}
 
 \begin{keywords}
@@ -71,7 +72,7 @@ occultations - planets and satellites: general - planets and satellites: individ
 
 \section{Introduction}\label{Sec: introducao}
 
-Irregular satellites revolve around giant planets at large distances in eccentric, highly inclined and frequently retrograde orbits. Because of these peculiar orbits, it is largely accepted that these objects did not form by accretion around their planet, but were captured in the early solar system \citep{Sheppard2005}.
+Irregular satellites revolve around giant planets at large distances in eccentric, highly inclined and frequently retrograde orbits. Because of these peculiar orbits, it is largely accepted that these objects did not form by accretion around their planet, but were captured in the early Solar System \citep{Sheppard2005}.
 
 There is no consensus for a single model explaining where the irregular satellites were formed. \cite{Cuk2004} showed that the progenitor of the Himalia group may have originated in heliocentric orbits similar to the Hilda asteroid group. \cite{Sheppard2005} stated that the irregular satellites may be some of the objects that were formed within the giant planets region.
 
@@ -81,12 +82,12 @@ There is no consensus for a single model explaining where the irregular satellit
 
 Phoebe is the most studied irregular satellite. \cite{Clark2005} suggest that its surface is probably covered by material of cometary origin. It was also stated by \cite{Johnson2005} that if the porosity of Phoebe is 15\%, Phoebe would have an uncompressed density similar to those of Pluto and Triton.
 
-On this subject, \cite{GomesJunior2015} obtained 6523 suitable positions for 18 irregular satellites between 1992 and 2014 with an estimated error in the positions of about 60 to 80 mas. For some satellites the number of positions obtained is comparable to the number used in the numerical integration of orbits by the JPL \citep{Jacobson2012}. They pointed out that the ephemeris of the irregular satellites have systematic errors that may reach 200 mas for some satellites. These new and large dataset of observations makes possible the generation of new and improved numerical integration of the orbits of these objects. Consequently, stellar occultations by irregular satellites can be predicted with higher accuracy.
+\cite{GomesJunior2015} obtained 6523 suitable positions for 18 irregular satellites between 1992 and 2014 with an estimated error in the positions of about 60 to 80 mas. For some satellites the number of positions obtained is comparable to the number used in the numerical integration of orbits by the JPL \citep{Jacobson2012}. They pointed out that the ephemeris of the irregular satellites have systematic errors that may reach 200 mas for some satellites.
 
-We present in this paper new numerical integration of the orbits of the 8 major irregular satellites of Jupiter (Himalia, Elara, Pasiphae, Lysithea, Carme, Ananke, Sinope and Leda) for predict stellar occultations. This is a specific short-time ephemeris using only the positions obtained by \cite{GomesJunior2015}. We aim to eliminate the systematic errors in the JPL ephemeris (see Sec. \ref{Sec: integration}). %For an object at the distance of Jupiter, this represents an error langer than 700 km in the shadow path of an occultation.
+We present in this paper new numerical integration of the orbits of the 8 major irregular satellites of Jupiter (Himalia, Elara, Pasiphae, Lysithea, Carme, Ananke, Sinope and Leda) using only the positions obtained by \cite{GomesJunior2015}. We aim to eliminate the systematic errors in the JPL ephemeris (see Sec. \ref{Sec: integration}). %For an object at the distance of Jupiter, this represents an error langer than 700 km in the shadow path of an occultation.
 For Phoebe, we updated the ephemeris of \cite{Desmars2013} using the observations of \cite{GomesJunior2015}, \cite{Peng2015}, observations from Minor Planet Center and observations from Flagstaff. 
 
-Also, with new and precise ephemeris, we present stellar occultation predictions for these 9 objects up to 2020. Phoebe, being the most studied object with a good measured size, can be used to calibrate and evaluate the technique for similar objects. Up to date, no observation of a stellar occultation by an irregular satellite was published. Since their estimated sizes are very small (see Table \ref{Tab: satellite-diameter}), this may have discouraged earlier tries. But, in fact, given their relatively closer distances as compared to TNOs and Centaurs, and considering the current precision of their ephemeris and of star positions, we can now reliably predict the exact location and instant where the shadow of the occultation will cross the Earth.
+Phoebe, being the most studied object with a good measured size, can be used to calibrate and evaluate the technique for similar objects. Up to date, no observation of a stellar occultation by an irregular satellite was published. Since their estimated sizes are very small (see Table \ref{Tab: satellite-diameter}), this may have discouraged earlier tries. But, in fact, given their relatively closer distances as compared to TNOs and Centaurs, and considering the precision of our ephemeris and of star positions, we can now reliably predict the exact location and instant where the shadow of the occultation will cross the Earth.
 
 \begin{table}
 \caption{\label{Tab: satellite-diameter} Estimated diameter of the satellites and correspondent apparent diameter}
@@ -121,13 +122,15 @@ $^{c}${From Voyager-2 observations.}
 
 %Since 2009 many successful observations of stellar occultations by TNOs have been reported in the literature \citep{Elliot2010, Sicardy2011, Ortiz2012, Braga-Ribas2013}, the main disadvantages in their prediction being large heliocentric distances and ephemeris error, facts somewhat compensated for the larger diameters involved. In contrast to TNOs, the irregular satellites have much better ephemeris because the orbits of their host planets are better  known, their observational time span is much wider and covers many orbital periods. Moreover, the irregular satellites are much closer to Earth which implies in a much smaller shadow path error in kilometers. These advantages may be somewhat balanced by the smaller sizes estimated for the irregular satellites.Thus, in comparison, the chances for a successful observation of an stellar occultation by an irregular satellite should be considered at least also as good as those by TNOs.
 
-In section \ref{Sec: integration} we show the building of the new ephemeris. In section \ref{Sec: predictions}, we present the predictions of the stellar occultations by irregular satellites and how they were made. Some tests made to check the accuracy of the predictions are presented in section \ref{Sec: testes} and the final discussion is presented in section \ref{Sec: discussion}.
+In section \ref{Sec: integration} the new determination of the orbits. In section \ref{Sec: predictions}, we present the predictions of the stellar occultations by irregular satellites, including some tests made to check the accuracy of the predictions. The final discussion is presented in section \ref{Sec: discussion}.
 
-\section{Ephemeris} \label{Sec: integration}
+\section{Orbit computations} \label{Sec: integration}
 
-In order to improve ephemeris in short time spans in the near future for a more efficient prediction of stellar occultations by irregular satellites, we need predictions based on new and recent observations. In this context, \cite{GomesJunior2015} published 6523 precise positions for 18 irregular satellites from observations made at the Observatório do Pico dos Dias (OPD), Observatoire Haute-Provence (OHP) and European Southern Observatory (ESO) between 1992 and 2014. 
+\cite{GomesJunior2015} published 6523 precise positions for 18 irregular satellites from observations made at the Observatório do Pico dos Dias (OPD), Observatoire Haute-Provence (OHP) and European Southern Observatory (ESO) between 1992 and 2014. 
 
-Here we develop our own ephemeris based on the observations published in \cite{GomesJunior2015}. First, because the reduction was made with consistent and precise stellar catalogue and with a robust and reliable software \citep[PRAIA,][]{Assafin2011}. Second, besides recent observations, this consistent set of numerous and precise positions covers many orbital periods at many distinct orbital plane sights, so that the orbital inclinations along with all other orbital elements could be satisfactorily derived without the need of further position sets. For these reasons, only this set of positions was used for building the new ephemeris for the satellites of Jupiter.
+Here we compute new orbits based on the observations published in \cite{GomesJunior2015}. First, because the reduction was made with a consistent and precise stellar catalogue and with a robust astrometry \citep[PRAIA,][]{Assafin2011}. Second, besides recent observations, this consistent set of numerous and precise positions covers many orbital periods at many distinct orbital plane sights, so that the orbital inclinations along with all other orbital elements could be satisfactorily derived without the need of further position sets. For these reasons, only this set of positions was used for the satellites of Jupiter.
+
+Due to the context of this work regarding to stellar occultations, the orbit fitting procedures used aimed primarily to derive precise ephemerides for the near future. The procedures allow for the improvement of orbits as new observations are added.
 
 \subsection{Special tailored Ephemerides (STE) for Jupiter irregular satellites}
 
@@ -254,9 +257,9 @@ In Fig. \ref{Fig:eph-Phoebe} we compare our ephemeris (PH15) with the SAT375 JPL
 %
 %\cite{GomesJunior2015} published 902 new positions for Nereid from observations between 1992 and 2014. The development of a better ephemeris for Nereid using these new positions in the context discussed here of near future stellar occultations is desirable, but is out of the scope of this paper.  
 
-\section{Prediction of occultations} \label{Sec: predictions}
+\section{Prediction of stellar occultations} \label{Sec: predictions}
 
-In order to obtain precise fundamental physical parameters like size and shape, thus constraining the albedo and in a broader sense also the composition for the irregular satellites and therefore to contribute to the study of their origin, we aim at observing stellar occultations, which provide  more accurate results than other ground-based techniques \citep{Sicardy2011, Ortiz2012, Braga-Ribas2014}. For that, reliable predictions of stellar occultations by these satellites are most needed.
+\subsection{Candidate events}
 
 The prediction of the occultations was made by crossing the stellar coordinates and proper motions of the UCAC4 catalogue \citep{Zacharias2013} with the ephemeris presented in Sec. \ref{Sec: integration}. The search for stellar candidates follows the same procedure as presented by \cite{Assafin2010, Assafin2012} and \cite{Camargo2014}.
 
@@ -330,13 +333,13 @@ The central red dot show the geocentric closest approach of the shadow. The smal
 The first preliminary catalogue version of the ESA astrometry satellite GAIA \citep{deBruijne2012} is expected to be released up to the end of 2016 (The catalogue with five-parameter astrometric solutions is up to the end of 2017). The precise star positions to be derived by GAIA will provide better predictions with the main source of error being the ephemeris. Astrometric reduction of observations published in \cite{GomesJunior2015} will be revised with the GAIA catalogue and the predictions will be improved. Since we cannot foresee exactly when the GAIA catalogue will be released and when new and re-reduced satellite positions in the GAIA frame will become available, we decided to publish predictions up to the end of 2020. In the GAIA era, the occultations predicted will be updated.
 
 
-\subsection{Prediction test} \label{Sec: testes}
+\subsection{Robustness of predictions} \label{Sec: testes}
 
 Since 2009 many successful observations of stellar occultations by TNOs have been reported in the literature \citep{Elliot2010, Sicardy2011, Ortiz2012, Braga-Ribas2013}, the main disadvantages in their prediction being large heliocentric distances and ephemeris error, facts somewhat compensated for the larger diameters involved. In contrast to TNOs, the irregular satellites have much better ephemeris because the orbits of their host planets are better  known, their observational time span is much wider and covers many orbital periods. Moreover, the irregular satellites are much closer to Earth which implies in a much smaller shadow path error in kilometers. These advantages may be somewhat balanced by the smaller sizes estimated for the irregular satellites. Thus, in comparison, the chances for a successful observation of an stellar occultation by an irregular satellite should be considered at least also as good as those by TNOs.
 
-Observing a stellar occultation demands a great effort. And, in our case, the shadow covers a very restricted area on Earth because of the size of the irregular satellites. Since no stellar occultation by an irregular satellite was observed up to date, and since we want to be sure that we can start observational campaigns with reasonable chances of success, we tested an occultation prediction for a large target, to assess the quality of the prediction.
+Observing a stellar occultation demands a great effort. And, in our case, the shadow covers a very restricted area on Earth because of the size of the irregular satellites. Since no stellar occultation by an irregular satellite was observed up to date, and since we want to be sure that we can start observational campaigns with reasonable chances of success, we tested the robustness of an occultation prediction for a large target.
 
-The test design consisted in observing the object and star to be occulted near the date of the event predicted when the two objects were present in the same field of view (FOV), close to each other. Thus, the relative positions between the two objects had minimal influence of the errors of the reference catalogue of stars used and possible field distortions \citep[and references therein]{Peng2008}. The relative positions of the star and satellite were used to check the original predictions. Notice that in the test we do not attempt to observe any actual occultation. The test could be performed at any site, regardless of the Earth location where the occultation would in fact be visible. 
+The test design consisted in observing the object and star to be occulted near the date of the event predicted when the two objects were present in the same field of view (FOV), close to each other. Thus, the relative positions between the two objects had minimal influence of the errors of the reference catalogue of stars used and possible field distortions \citep[and references therein]{Peng2008}. The relative positions of the star and satellite were used to check the original prediction. Notice that in the test we did not attempt to observe any actual occultation. The test could be performed at any site, regardless of the Earth location where the occultation would in fact be visible. 
 
 We tested the occultation by Himalia predicted to occur on March 3, 2015. The shadow would cross the northern part of South America. For the event, four situations were considered:
 \begin{enumerate}[I]
@@ -370,24 +373,26 @@ C/A: geocentric closest approach; Sit: Situation test considered.
 
 \section{Discussion} \label{Sec: discussion}
 
-Based on the observations of \cite{GomesJunior2015}, which was a large dataset with 6523 positions of irregular satellites observed between 1992 and 2014, we were able to generate new numerical integration of the orbits of these objects. Consequently, with more precise ephemeris, we, then, predicted stellar occultations aiming to access fundamental parameters like size and shape.
+We performed new numerical integration for improving the orbits of some of the larger irregular satellites. Consequently, with more precise ephemeris, we, then, predicted stellar occultations aiming to access fundamental parameters like size, shape, albedo, ultimately aiming to track the formation origin of these bodies.
 
-For the irregular satellites of Jupiter (Ananke, Carme, Elara, Himalia, Leda, Lysithea, Pasiphae and Sinope), we produced a specific short-time ephemeris using only the observations of \cite{GomesJunior2015}. The systematic errors found in the JPL ephemeris \citep{Jacobson2012} and \cite{Emelyanov2008} were corrected. This new ephemeris was denominated Special Tailored Ephemeris.
+For the irregular satellites of Jupiter (Ananke, Carme, Elara, Himalia, Leda, Lysithea, Pasiphae and Sinope), we produced ephemeris using only the observations of \cite{GomesJunior2015}. The systematic errors found in the JPL ephemeris \citep{Jacobson2012} and \cite{Emelyanov2008} were corrected. This new ephemeris was denominated Special Tailored Ephemeris.
 
-We also updated the ephemeris of \cite{Desmars2013} using the observations of \cite{GomesJunior2015}, \cite{Peng2015} observations from  MPC and from Flagstaff. A total of 5886 observations between 1989 and 2014 was used in the process. This represents and increase of about 75\% in the number used to generate the orbits of Phoebe by \cite{Desmars2013}.
+We also updated the ephemeris of Phoebe \citep{Desmars2013} using the observations of \cite{GomesJunior2015}, \cite{Peng2015} observations from  MPC and from Flagstaff. A total of 5886 observations between 1989 and 2014 were used in the process. This represents and increase of about 75\% in the number used to generate the orbits of Phoebe by \cite{Desmars2013}.
 
-We predict stellar occultations for the period of 2016-2020 for eight irregular satellites of Jupiter: Ananke, Carme, Elara, Himalia, Leda, Lysithea, Pasiphae, and Sinope; and one satellite of Saturn: Phoebe. The procedure used was the same as that for the prediction of stellar occultations by Pluto and its satellites in \cite{Assafin2010} and by Centaurs and TNOs in \cite{Assafin2012} and \cite{Camargo2014}.The candidate stars were searched in the UCAC4 catalogue. From this, a total of \noccs events are foreseen. 
+\textcolor{red}{Colocar mais alguma coisa sobre as efemérides}
+
+We predict stellar occultations for the period of 2016-2020 for eight irregular satellites of Jupiter: Ananke, Carme, Elara, Himalia, Leda, Lysithea, Pasiphae, and Sinope; and one satellite of Saturn: Phoebe. The procedure used was the same as that for the prediction of stellar occultations by Pluto and its satellites in \cite{Assafin2010} and by Centaurs and TNOs in \cite{Assafin2012} and \cite{Camargo2014}.The candidate stars were searched in the UCAC4 catalogue. The occasional passage of Jupiter by the galactic plane in 2019-2020 and Saturn in 2018 creates the best opportunity of observing stellar occultations in the near future due to the great density of stars in the region. Indeed, a total of \noccs events are foreseen.
 
 In a broader, general sense, the probability of successfully observing an occultation is roughly the ratio of the satellite's radius by the budget error (2 sigma for a 95\% confidence level) of ephemeris and star position. Thus, UCAC4 errors ranging between 20 mas - 50 mas (1 sigma) combined with a mean error (1 sigma) in the JPL ephemeris of 30 mas for Himalia and 150 mas for Leda published in Table 2 of \cite{Jacobson2012} would give 28\%-17\% probability of observing such an event by Himalia and $\approx2$\% for Leda, the smallest irregular satellite in the sample. Observations a few days before the date of occultation predicted may improve the combined errors to 40-80 mas, depending on the magnitude of the objects.
 
 The test made with an occultation expected to happen in March 03, 2015 for Himalia showed that this event would probably have been observed successfully in case there were observers available in the shadow area. The results show satisfying small offsets with respect to the local of the prediction.
 
-\cite{GomesJunior2015} also observed Sycorax (satellite of Uranus) and Nereid (satellites of Neptune). Sycorax had a few observations on 9 nights among two years which did not cover one orbital period. For Nereid, the observations covered many orbital periods, but due to Nereid's large orbital eccentricity there are no observations near the pericenter (True Anomaly between 270º and 90º). For this we did not generated new orbits for these satellites.
+\cite{GomesJunior2015} also observed Sycorax (satellite of Uranus) and Nereid (satellites of Neptune). Sycorax had a few observations on 9 nights in two years which did not cover one orbital period. For Nereid, the observations covered many orbital periods, but due to Nereid's large orbital eccentricity there are no observations near the pericenter.
 
-Also, Uranus and Neptune are crossing a very low dense region of stars. This causes almost no stellar occultation by these objects up to 2020. In fact, we identified 2 events for each satellite in this period, but due to the bad conditions of the events we chose to not publish any events.
+Uranus and Neptune are crossing a very low dense region of stars. This results in almost no stellar occultation by these objects up to 2020. In fact, using JPL ephemeris, we identified only 2 events for each satellite in this period, but due to the bad conditions of the events (shadow far from observatories; faint stars) we chose not to publish any events here.  For these reasons we did not attempt to generate new orbits for these satellites here.
 
-Continuous observations of the satellites are recommended and fitting of our dynamical model to those observations are expected to reduce the respective STE ephemeris errors. The first version of the GAIA catalogue is to be released up to the end of 2016 and will improve the position error of the stars to the 1-5 mas level. It will allow for the discovery of ocultations by fainter stars not present in the UCAC4 catalogue.
-The release of the GAIA catalogue should have a positive impact on both the astrometric precision of occulted stars and the reduction of astrometric positions of the satellites. As a result, prediction of stellar occultations by irregular satellites shall increase in number as well as in success.
+Continuous observations of the satellites are recommended and fitting of our dynamical model to those observations are expected to reduce the respective STE ephemeris errors. The first version of the GAIA catalogue is to be released up to the end of 2016 and will improve the position error of the stars to the 1-5 mas level. Re-reduction of older positions, and reduction of new positions of irregular satellites with GAIA will improve new orbit determinations. It will also allow for the discovery of ocultations by more stars not present in the UCAC4 catalogue.
+The release of the GAIA catalogue should have a positive impact on both the astrometric precision of occulted stars and the reduction of new astrometric positions of the satellites. As a result, prediction of stellar occultations by irregular satellites shall increase in number as well as in success.
 
 \section*{Acknowledgements}
 
