--- a/relatorio/Occ-Irregular/Relatorio.tex
+++ b/relatorio/Occ-Irregular/Relatorio.tex
@@ -113,10 +113,9 @@ Phoebe & 32 & $212 \pm 1.4^{b}$ & 3 \tabularnewline
 \hline
 \end{tabular}
 \end{center}
-References: (1) \cite{Rettig2001}; (2) \cite{Porco2003}; (3) \cite{Thomas2010}; (4) \cite{Thomas1991}; (5) \cite{Thomas2000}.\\
+References: (1) \cite{Rettig2001}; (2) \cite{Porco2003}; (3) \cite{Thomas2010}.\\
 $^{a}${Using a mean distance from Jupiter of 5 AU, from Saturn of 9 AU and from Neptune of 30 AU.}
 $^{b}${From Cassini observations.}
-$^{c}${From Voyager-2 observations.}
 \par
 \end{table}
 
