--- a/relatorio/Netuno/Relatorio.tex
+++ b/relatorio/Netuno/Relatorio.tex
@@ -90,7 +90,7 @@ Zeiss & 258 & 345 & 222 \\
 Total & 3249 & 4158 & 2657 \\ 
 \hline 
 \end{tabular}
-\\Number of positions identified of Neptune and Triton by telescope. In parentheses the number of nights where the observations are distributed. Matches: Number of positions where Neptune and Triton were identified automatically in the same image.
+\\Number of positions identified of Neptune and Triton by telescope. Matches: Number of positions where Neptune and Triton were identified automatically in the same image.
 \end{table*}
 
 There were a total of 9942 images from June 1992 to September 2015. Many of the oldest images had no coordinates in header or they were wrong. Sometimes the filter was missing. Many nights had two exposure sets. The first one with low exposure time so Neptune were not saturated, but there were few reference stars in the field. The second one with higher exposure time so Triton were brighter and had more reference stars the the previous exposure, but the image of Neptune were saturated.
